--- a/DDPM.ipynb
+++ b/DDPM.ipynb
@@ -34,6 +34,7 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
+    "import torch_optimizer\n",
     "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
     "from torch.autograd import Variable\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -446,7 +447,8 @@
     "        self.diffusion_trainer = GaussianDiffusionTrainer(self.model, self.args.beta_1, self.args.beta_t, self.args.num_times).to(self.device)\n",
     "        self.diffusion_sampler = GaussianDiffusionSampler(self.model, self.args.beta_1, self.args.beta_t, self.args.num_times).to(self.device)\n",
     "        \n",
-    "        self.optimizer = optim.Adam(self.model.parameters(), lr=2 * self.args.lr)\n",
+    "        #self.optimizer = optim.Adam(self.model.parameters(), lr=2 * self.args.lr)\n",
+    "        self.optimizer = torch_optimizer.Lamb(self.model.parameters(), lr=2 * self.args.lr)\n",
     "        self.scheduler = CosineAnnealingLR(self.optimizer, T_max=4, eta_min=self.args.lr / 2)\n",
     "    \n",
     "    def weights_init(self, module):\n",
@@ -594,7 +596,7 @@
     "    parser.add_argument('--beta_t', type=float, default=0.02)\n",
     "    parser.add_argument('--num_times', type=int, default=1000)\n",
     "    parser.add_argument('--dim_hidden', type=int, default=128)\n",
-    "    parser.add_argument('--batch_size', type=int, default=8)\n",
+    "    parser.add_argument('--batch_size', type=int, default=128)\n",
     "    parser.add_argument('--num_train', type=int, default=100)\n",
     "    parser.add_argument('--cpu', action='store_true')\n",
     "    parser.add_argument('--generate', action='store_true')\n",
