--- a/DDPM.ipynb
+++ b/DDPM.ipynb
@@ -153,9 +153,9 @@
     "        self.model = model\n",
     "        self.num_times = num_times\n",
     "\n",
-    "        self.betas = nn.Parameter(torch.linspace(beta_1, beta_t, num_times).double())\n",
+    "        betas = nn.Parameter(torch.linspace(beta_1, beta_t, num_times).double())\n",
     "        \n",
-    "        alphas = 1. - self.betas\n",
+    "        alphas = 1. - betas\n",
     "        alphas_bar = torch.cumprod(alphas, dim=0)\n",
     "\n",
     "        self.sqrt_alphas_bar = nn.Parameter(torch.sqrt(alphas_bar))\n",
@@ -186,16 +186,16 @@
     "        self.model = model\n",
     "        self.num_times = num_times\n",
     "        \n",
-    "        self.betas = torch.linspace(beta_1, beta_t, num_times).double()\n",
+    "        betas = torch.linspace(beta_1, beta_t, num_times).double()\n",
     "        \n",
-    "        alphas = 1. - self.betas\n",
+    "        alphas = 1. - betas\n",
     "        alphas_bar = torch.cumprod(alphas, dim=0)\n",
     "        alphas_bar_prev = F.pad(alphas_bar, [1, 0], value=1)[:num_times]\n",
     "        \n",
     "        self.coeff1 = nn.Parameter(torch.sqrt(1. / alphas))\n",
     "        self.coeff2 = nn.Parameter(self.coeff1 * (1. - alphas) / torch.sqrt(1. - alphas_bar))\n",
     "        \n",
-    "        self.var = nn.Parameter((1. - alphas_bar_prev) / (1. - alphas_bar) * self.betas)\n",
+    "        self.var = nn.Parameter((1. - alphas_bar_prev) / (1. - alphas_bar) * betas)\n",
     "\n",
     "    def p_mean_variance(self, x_t, t):\n",
     "        eps = self.model(x_t, t)\n",
@@ -538,7 +538,7 @@
     "                  + f' Loss[{epoch_loss}]')\n",
     "\n",
     "            ## DEBUG\n",
-    "            #self.generate(1)\n",
+    "            #self.generate()\n",
     "            \n",
     "            self.scheduler.step()\n",
     "            \n",
@@ -600,9 +600,10 @@
     "    parser.add_argument('--num_train', type=int, default=100)\n",
     "    parser.add_argument('--cpu', action='store_true')\n",
     "    parser.add_argument('--generate', action='store_true')\n",
-    "    parser.add_argument('--noresume', action='store_true')\n",
+    "    #parser.add_argument('--noresume', action='store_true')\n",
     "    \n",
     "    args, unknown = parser.parse_known_args()\n",
+    "    args.noresume = True # Because, can not use for LAMB.\n",
     "\n",
     "    if len(unknown) != 0:\n",
     "        print(f'Unknown option: {unknown}')\n",
