Fix GaussianDiffusionSampler's memory-flow-bug

--- a/DDPM.ipynb
+++ b/DDPM.ipynb
@@ -208,6 +208,8 @@
     "        xt_shape = x.shape\n",
     "        for times in reversed(range(self.num_times)):\n",
     "            t = torch.ones([xt_shape[0]], dtype=torch.long, device=x.device) * times\n",
+    "            x = x.detach()\n",
+    "            t = t.detach()\n",
     "            mean, var= self.p_mean_variance(x, t)\n",
     "            if times > 0:\n",
     "                noise = torch.randn_like(x)\n",
