--- a/DDPM-AMP.ipynb
+++ b/DDPM-AMP.ipynb
@@ -209,6 +209,8 @@
     "        xt_shape = x.shape\n",
     "        for times in reversed(range(self.num_times)):\n",
     "            t = torch.ones([xt_shape[0]], dtype=torch.long, device=x.device) * times\n",
+    "            x = x.detach()\n",
+    "            t = t.detach()\n",
     "            mean, var= self.p_mean_variance(x, t)\n",
     "            if times > 0:\n",
     "                noise = torch.randn_like(x)\n",
@@ -642,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
