--- a/DDPM-AMP.ipynb
+++ b/DDPM-AMP.ipynb
@@ -439,7 +439,7 @@
     "class Solver:\n",
     "    def __init__(self, args):\n",
     "        has_cuda = torch.cuda.is_available() if not args.cpu else False\n",
-    "        self.device = torch.device(\"cuda\" if has_cuda else \"cpu\")\n",
+    "        self.device = torch.device('cuda' if has_cuda else 'cpu')\n",
     "        \n",
     "        self.args = args\n",
     "        self.epoch = 0\n",
@@ -550,11 +550,12 @@
     "            if resume:\n",
     "                self.save_resume()\n",
     "    \n",
-    "    def generate(self):\n",
+    "    def generate(self, num):\n",
     "        self.model.eval()\n",
-    "        noise = torch.randn(size=[1, 3, self.args.image_size, self.args.image_size], device=self.device)\n",
-    "        image = self.diffusion_sampler(noise)\n",
-    "        save_image(image, os.path.join(self.args.result_dir, f'generated_{time.time()}.png'))\n",
+    "        for _ in tqdm(range(num)):\n",
+    "            noise = torch.randn(size=[1, 3, self.args.image_size, self.args.image_size], device=self.device)\n",
+    "            image = self.diffusion_sampler(noise)\n",
+    "            save_image(image, os.path.join(self.args.result_dir, f'generated_{time.time()}.png'))\n",
     "        print('New picture was generated.')\n",
     "        self.model.train()"
    ]
@@ -576,8 +577,8 @@
     "    solver = Solver.load(args, resume=not args.noresume)\n",
     "    solver.load_state()\n",
     "    \n",
-    "    if args.generate:\n",
-    "        solver.generate()\n",
+    "    if args.generate > 0:\n",
+    "        solver.generate(args.generate)\n",
     "        return\n",
     "    \n",
     "    solver.train(not args.noresume)\n",
@@ -604,7 +605,7 @@
     "    parser.add_argument('--batch_size', type=int, default=64)\n",
     "    parser.add_argument('--num_train', type=int, default=100)\n",
     "    parser.add_argument('--cpu', action='store_true')\n",
-    "    parser.add_argument('--generate', action='store_true')\n",
+    "    parser.add_argument('--generate', type=int, default=0)\n",
     "    #parser.add_argument('--noresume', action='store_true')\n",
     "    \n",
     "    args, unknown = parser.parse_known_args()\n",
